Changelog

$Id: Changes,v 1.65 2011-03-21 13:04:29 oops Exp $

* Thu, Mar  3 2011
	- add sample code
	- < release 0.1.3 >

* Wed, Mar  2 2011
	- fixed long2bin that returns 0 when input argument is smaller than
	  max of 32bit integer

* Sun, Feb 20 2011
	- fixed memory leak of preg_match
	- add preg_match_r
	- update exbeded pcre library to 8.12
	- rewrite preg_grep

* Sat, Feb 19 2011
	- remove convert_racecode api
	- add is_utf8 api

* Tue, Feb 15 2011
	- add charset_conv

* Sat, Feb 12 2011
	- fixed trim that return 0 byte about 1byte string
	- thread safe about errno
	- rewrite str2double, strtoupper, strtolower
	- rewrite libfile.c

* Sun, Feb  8 2011
	- add addslashes_r for binary safe

* Sun, Feb  7 2011
	- fixed trim api that don't remove back spaces.

* Sun, Feb  6 2011
	- fixed idn memory leak
	- adjust GCC visibility extension

* Sat, Dec  5 2009
	- add is_ksc5601

* Fri, Oct 20 2009
	- add realpath_r

* Fri, Jun  9 2006
	- update autogen
	- start 0.1.3

* Thu, Sep  1 2005
	- fixed CAN-2005-2491 in pcrelib
	- < release 0.1.2 >

* Mon, Aug  9 2004
	- changed filename commoh.h to oc_common.h
	- fixed typo in Makefile.in
	- < release 0.1.1 >

* Fri, Aug  6 2004
	- fixed iconv problem on liboc that conflict gpl license problem
	- imported libtool system

* Mon, Jun 21 2004
	- Support FreeBSD
	- added ax_create_stdint_h.m4 file
	- allow autoconf 2.59 and automake 1.8

* Wed, Feb 18 2004
	- < release 0.1.0 >

* Wed, Feb 18 2004
	by JoungKyun Kim <http://oops.org>
	- fixed miss declaration on stringprep_locale_charset_cache variable
	- fixed invalid function type
	- removed routine case of return 0 on o_getopt function
	- devided license with BPL and LGPL (liboc and libogc)

* Tue, Feb 10 2004
	by JoungKyun Kim <http://oops.org>
	- changed stringprep_locale_charset_cache to extern

* Sat, Feb  7 2004
	by JoungKyun Kim <http://oops.org>
	- changed exit code to return source variable on idn code

* Wed, Feb  4 2004
	by JoungKyun Kim <http://oops.org>